# RoboTeam_HomeAssignment

./: .gitignore  README.md  docker-compose.yml  docker-compose_drive_hub.yml  working_env.txt
docker/: Dockerfile  Dockerfile_canopen_manager  Dockerfile_drive_hub  Dockerfile_operator  Dockerfile_video_hub
scripts/: can_test.sh  clone_and_build.sh  docker_build.sh  docker_build_drive_hub.sh  docker_build_operator.sh  docker_build_ros2can.sh  docker_build_video_hub.sh  docker_run_drive_hub.sh  docker_run_operator.sh  docker_run_ros2can.sh  docker_run_video_hub.sh  mtgr_test.sh  start_canbus.sh  stop_can.sh
src/controllers/: package.xml  setup.py
src/controllers/controllers/: ps_controller_node.py  teleop_keyboard_node.py
src/drive_hub/: package.xml  setup.cfg  setup.py
src/drive_hub/drive_hub/: cmd_vel_sim_node.py  data_logger.py  drive_hub_node.py  (+3 more)
src/health_monitor/: package.xml  setup.cfg  setup.py
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: CanFrame.msg  FlippersControl.msg  Image420.msg  ManipulatorControl.msg  MotorsVelocity.msg  MpcInput.msg  RobotStatus.msg  WheelsVelocity.msg
src/interfaces/srv/: GetCameraIp.srv  GetHealthHistory.srv
src/launcher/: CMakeLists.txt  package.xml
src/launcher/launch/: drive_hub.launch.py  health_monitor.launch.py  operator_hub.launch.py  ros2can.launch.py  video_hub.launch.py
src/operator/: package.xml  setup.cfg  setup.py
src/operators_hub/: package.xml  setup.cfg  setup.py
src/rook_description/: CMakeLists.txt  package.xml
src/ros2can/: package.xml  setup.cfg  setup.py
src/skid_steer_controller/: package.xml  setup.py
src/tester/: package.xml  setup.py
src/twist_mux_pkg/: package.xml  setup.cfg  setup.py
src/video_hub/: package.xml  setup.cfg  setup.py
(+55 files in other folders)
