<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>launcher</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <author email="aviv.h@robo-team.com">Aviv Haklai</author>
  <maintainer email="aviv.h@robo-team.com">Aviv Haklai</maintainer>
  <license>robo-team</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>cmd_vel_sim_node</exec_depend>
  <exec_depend>imu_sim_node</exec_depend>
  <exec_depend>mpc_sim_node</exec_depend>


  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
